# stream_recorder

balancer/: Dockerfile
balancer/src/: CMakeLists.txt  main.cpp  queue.cc  queue.h
get_stream_info/: Dockerfile
get_stream_info/src/: main.py  requirements.txt
record/: Dockerfile
record/src/: main.py  requirements.txt
service_api/: Dockerfile
service_api/src/: CMakeLists.txt  config.json  main.cpp  utils.h
service_api/src/controllers/: Record.cc  Record.h  User.cc  User.h
service_api/src/fillters/: JsonCheck.cc  JsonCheck.h  TokenCheck.cc  TokenCheck.h
service_api/src/models/: Records.cc  Records.h  Sessions.cc  Sessions.h  Users.cc  Users.h  model.json
web/: nginx.conf  package-lock.json  package.json  svelte.config.js
web/src/: app.html  rpc.js  user.js
web/src/routes/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/register/: +page.svelte
